--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,9 @@ flutter:
     - assets/audio/bell_ring_001_73093.mp3
     - assets/audio/bell_small_001.mp3
     - assets/audio/bell_small_002.mp3
+    - assets/audio/bell_large_ring_designed.mp3
+    - assets/audio/bell_med_large_ring_designed.mp3
+    - assets/audio/cartoon_fall_fast_whistling.mp3
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
