--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,12 +31,10 @@ dependencies:
   flutter:
     sdk: flutter
   logger: ^1.1.0
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
   provider: ^6.1.2
   audioplayers: ^6.0.0
+  shared_preferences: ^2.2.2
 
 dev_dependencies:
   flutter_test:
