--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,11 +30,12 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  logger: ^1.1.0
+  logger: ^2.1.0
   cupertino_icons: ^1.0.6
   provider: ^6.1.2
-  audioplayers: ^6.0.0
+  # audioplayers: ^6.0.0
   shared_preferences: ^2.2.2
+  audioplayers: ^5.2.1
 
 dev_dependencies:
   flutter_test:
